Temporary fix to logo sizing on mobile view

--- a/less/agency.less
+++ b/less/agency.less
@@ -895,6 +895,9 @@ aside.clients {
 		width: 100%;
 		//filter: grayscale(100%);
 	}
+	.mobile-shown {
+		display: none;
+	}
 }
 
 aside {
@@ -915,6 +918,10 @@ aside {
 			border: 1px solid red;
 			display: none;
 			filter: grayscale(0%);
+		}
+
+		.mobile-shown {
+			display: initial;
 		}
 	}
 
